--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,13 @@ body {
 }
 
 @font-face {
+  font-family: 'SF Pro Display 600';
+  src: url('../assets/San Francisco Pro Text/SF-Pro-Display-Semibold.otf');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'SF Pro Text Bold';
   src: url('../assets/San Francisco Pro Text/SF-Pro-Text-Bold.otf');
   font-weight: 700;
@@ -41,40 +48,34 @@ a {
 * {
   box-sizing: border-box;
 }
-.app {
+.wrapper {
   /* background: linear-gradient(rgba(65, 66, 99, 0.09), url(/public/static/img/MaskGroup.png)); */
   /* background-image: url('../public/static/img/MaskGroup.png');
    */
-
   background: linear-gradient(180deg, #131317 -60.19%, rgba(65, 66, 99, 0.09) 50%),
     url('../public/static/img/MaskGroup.png') no-repeat center;
-  height: 100%;
-  width: 100%;
+  background-size: cover;
 
+  width: 100%;
+  height: 120vh;
   /* background-size: cover;
   background-repeat: no-repeat; */
 }
 
-.overlay {
-  /* position: absolute;
-  width: 1920px;
-  height: 1080px;
-  left: 0px;
-  top: 0px;
-  z-index: 1; */
-}
-.container {
-  max-width: 1440px;
+.content {
+  padding: 0;
   margin: auto;
-  opacity: 1;
-  z-index: 2;
+  position: relative;
+  height: 100%;
+
+  border-radius: 10px;
+  max-width: 1440px;
 
   /* background-image: url('../public/static/img/Mask Group.png');
     background-position: center;
     background-size: cover; */
 }
 header {
-  position: fixed;
   top: 0;
   height: 100px;
   border-bottom: 1px solid rgba(231, 231, 242, 0.4);
@@ -132,15 +133,6 @@ header {
 
 .banner {
   position: relative;
-  width: 100%;
-  height: 75vh;
-}
-
-.banner .bg {
-  position: relative;
-  width: 100%;
-  background: white;
-  height: 75vh;
 }
 
 .banner__title {
@@ -180,18 +172,60 @@ h2 {
 }
 
 .popup {
+  justify-content: space-between;
+  display: flex;
+  padding: 48px 36px;
   top: 314px;
   position: absolute;
   width: 570px;
   height: 400px;
-  right: 0;
+  right: -202px;
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(70px);
   border-radius: 16px 0px 0px 16px;
 }
 
+.popup__subtitle {
+  font-family: 'SF Pro Display 600';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 20px;
+  /* identical to box height, or 100% */
+  color: #ffffff;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+
+.popup__title {
+  width: 204px;
+  margin-top: 36px;
+  font-family: 'SF Pro Text Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 135%;
+  /* or 49px */
+
+  color: #ffffff;
+}
+
+.popup__bg {
+  position: absolute;
+  left: 300px;
+  top: 0px;
+  background: url('../public/static/img/andrew.png') center no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 300px;
+}
+
+.popup img {
+  margin-top: 85px;
+}
 .book {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   min-width: 1440px;
   height: 201px;
@@ -224,28 +258,85 @@ h2 {
 }
 
 .book__panel_wrapper {
-  display: flex;
+  /* display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   opacity: 0.3;
   border: 1px solid #e7e7f2;
+  border-radius: 10px; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  border: 1px solid rgba(231, 231, 242, 0.3);
   border-radius: 10px;
 }
 
+.accomodation,
+.checkin,
+.checkout {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  border-right: 1px solid rgba(231, 231, 242, 0.3);
+}
 .accomodation {
-  width: 460px;
+  width: 465px;
+  padding: 15px;
+  justify-content: space-between;
+}
+
+.book_item__wrapper {
+  display: flex;
+}
+
+.book_item__title {
+  margin: 0;
+  font-family: 'SF Pro Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  /* identical to box height, or 100% */
+
+  color: #e7e7f2;
+
+  opacity: 0.6;
+}
+.book_item__content {
+  margin-left: 15px;
+}
+p {
+  margin: 8px 0 0 0;
+  color: white;
 }
 
 .checkin {
   width: 190px;
+  justify-content: space-between;
+  padding-left: 16px;
 }
 
 .checkout {
+  padding-left: 20px;
   width: 150px;
 }
 
 .guests {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0;
   width: 265px;
+  justify-content: space-between;
+  padding-left: 16px;
+}
+
+.guests img {
+  margin-right: 15px;
 }
 
 .btn {
