--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,7 @@ a {
   background-size: cover;
 
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   /* background-size: cover;
   background-repeat: no-repeat; */
 }
@@ -76,7 +76,7 @@ a {
     background-size: cover; */
 }
 header {
-  top: 0;
+  width: 100%;
   height: 100px;
   border-bottom: 1px solid rgba(231, 231, 242, 0.4);
   padding: 0;
@@ -85,68 +85,6 @@ header {
   align-items: center;
   position: relative;
   background: transparent;
-}
-
-.group {
-  position: relative;
-  display: flex;
-}
-
-.group .navigation,
-.group .registration,
-.group .camping {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-}
-.group .camping {
-  font-family: 'SF Pro Display';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
-  /* identical to box height */
-}
-.group .navigation li {
-  margin-right: 60px;
-  font-family: 'SF Pro Text';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-}
-.group .registration li {
-  margin-left: 60px;
-  padding: 0;
-  font-family: 'SF Pro Text';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-}
-
-.group ul li {
-  list-style: none;
-  color: white;
-}
-
-.banner {
-  position: relative;
-}
-
-.banner__title {
-  display: block;
-  margin-top: 250px;
-  max-width: 860px;
-  max-height: 210px;
-  margin: 250px 0 0 0;
-}
-
-.banner__subtitle {
-  display: block;
-  max-width: 860px;
-  max-height: 84px;
 }
 
 h1 {
@@ -164,223 +102,9 @@ h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
-  line-height: 150%;
+  line-height: 140%;
 
   color: #ffffff;
 
   opacity: 0.8;
 }
-
-.popup {
-  justify-content: space-between;
-  display: flex;
-  padding: 48px 36px;
-  top: 314px;
-  position: absolute;
-  width: 570px;
-  height: 400px;
-  right: -202px;
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(70px);
-  border-radius: 16px 0px 0px 16px;
-}
-
-.popup__subtitle {
-  font-family: 'SF Pro Display 600';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 20px;
-  /* identical to box height, or 100% */
-  color: #ffffff;
-  mix-blend-mode: normal;
-  opacity: 0.5;
-}
-
-.popup__title {
-  width: 204px;
-  margin-top: 36px;
-  font-family: 'SF Pro Text Bold';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 135%;
-  /* or 49px */
-
-  color: #ffffff;
-}
-
-.popup__bg {
-  position: absolute;
-  left: 300px;
-  top: 0px;
-  background: url('../public/static/img/andrew.png') center no-repeat;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 400px;
-  width: 300px;
-}
-
-.popup img {
-  margin-top: 85px;
-}
-.book {
-  position: absolute;
-  bottom: 0;
-  min-width: 1440px;
-  height: 201px;
-  padding: 35px 50px;
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(70px);
-  /* Note: backdrop-filter has minimal browser support */
-
-  border-radius: 20px 20px 0px 0px;
-}
-
-.book__title {
-  font-family: 'SF Pro Text Bold';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 21px;
-  /* identical to box height */
-
-  display: flex;
-  align-items: center;
-  color: #ffffff;
-  mix-blend-mode: normal;
-}
-
-.book__content {
-  margin-top: 15px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.book__panel_wrapper {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  opacity: 0.3;
-  border: 1px solid #e7e7f2;
-  border-radius: 10px; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0;
-  margin: 0;
-  border: 1px solid rgba(231, 231, 242, 0.3);
-  border-radius: 10px;
-}
-
-.accomodation,
-.checkin,
-.checkout {
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  margin: 0;
-  border-right: 1px solid rgba(231, 231, 242, 0.3);
-}
-.accomodation {
-  width: 465px;
-  padding: 15px;
-  justify-content: space-between;
-}
-
-.book_item__wrapper {
-  display: flex;
-}
-
-.book_item__title {
-  margin: 0;
-  font-family: 'SF Pro Text';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 14px;
-  /* identical to box height, or 100% */
-
-  color: #e7e7f2;
-
-  opacity: 0.6;
-}
-.book_item__content {
-  margin-left: 15px;
-}
-p {
-  margin: 8px 0 0 0;
-  color: white;
-}
-
-.checkin {
-  width: 190px;
-  justify-content: space-between;
-  padding-left: 16px;
-}
-
-.checkout {
-  padding-left: 20px;
-  width: 150px;
-}
-
-.guests {
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  margin: 0;
-  width: 265px;
-  justify-content: space-between;
-  padding-left: 16px;
-}
-
-.guests img {
-  margin-right: 15px;
-}
-
-.btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 240px;
-  height: 72px;
-  cursor: pointer;
-
-  background: #91cb82;
-  border-radius: 10px;
-  font-family: 'SF Pro Text';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 20px;
-  /* identical to box height, or 111% */
-  color: #ffffff;
-  border: 0;
-}
-
-/* .book {
-  position: absolute;
-  bottom: 0;
-
-  width: 1440px;
-  height: 201px;
-  background-color: #979797;
-  border-radius: 20px 20px 0px 0px;
-}
-
-.popup {
-  bottom: 366px;
-  position: absolute;
-  width: 570px;
-  height: 400px;
-  right: 0;
-  background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(70px);
-  border-radius: 16px 0px 0px 16px;
-}
-
-.popup__image {
-  background-image: url('../public/static/img/andrew-ridley-RwfWSH6Xq0M-unsplash-min.png');
-  z-index: 1;
-} */
